--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,3 +1,9 @@
 <html>
   <title>To-Do lists</title>
+
+  <body>
+    <h1>Your To-Do list</h1>
+    <input type="" name="" id="id_new_item" placeholder="Enter a to-do item">
+    <table id="id_list_table"></table>
+  </body>
 </html>
