--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -3,7 +3,12 @@
 
   <body>
     <h1>Your To-Do list</h1>
-    <input type="" name="" id="id_new_item" placeholder="Enter a to-do item">
-    <table id="id_list_table"></table>
+    <form method="post">
+      <input type="" name="item_text" id="id_new_item" placeholder="Enter a to-do item">
+      {% csrf_token %}
+    </form>
+    <table id="id_list_table">
+      <tr><td>1: {{ new_item_text }}</td></tr>
+    </table>
   </body>
 </html>
