--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -3,7 +3,7 @@
 
   <body>
     <h1>Start a new To-Do list</h1>
-    <form method="post" action='/'>
+    <form method="post" action='/lists/new'>
       <input type="" name="item_text" id="id_new_item" placeholder="Enter a to-do item">
       {% csrf_token %}
     </form>
