--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,11 +1,9 @@
-<html>
-  <title>To-Do lists</title>
+{% extends "base.html" %}
 
-  <body>
-    <h1>Start a new To-Do list</h1>
-    <form method="post" action='/lists/new'>
-      <input type="" name="item_text" id="id_new_item" placeholder="Enter a to-do item">
-      {% csrf_token %}
-    </form>
-  </body>
-</html>
+{% block header_text %}
+  Start a new To-Do list
+{% endblock header_text %}
+
+{% block form_action %}
+  /lists/new
+{% endblock form_action %}
