--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,16 +1,17 @@
-<html>
-  <title>To-Do lists</title>
+{% extends "base.html" %}
 
-  <body>
-    <h1>Your To-Do list</h1>
-    <form method="post" action="/lists/{{list.id}}/add_item">
-      <input type="" name="item_text" id="id_new_item" placeholder="Enter a to-do item">
-      {% csrf_token %}
-    </form>
-    <table id="id_list_table">
-      {% for item in list.item_set.all %}
-        <tr><td>{{forloop.counter}}: {{ item.text }}</td></tr>  
-      {% endfor %}
-    </table>
-  </body>
-</html>
+{% block header_text %}
+  Start a new To-Do list
+{% endblock header_text %}
+
+{% block form_action %}
+  /lists/{{list.id}}/add_item
+{% endblock form_action %}
+
+{% block table %}
+  <table id="id_list_table">
+    {% for item in list.item_set.all %}
+      <tr><td>{{forloop.counter}}: {{ item.text }}</td></tr>  
+    {% endfor %}
+  </table>
+{% endblock table %}
