--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header_text %}
-  Start a new To-Do list
+  Your To-Do List
 {% endblock header_text %}
 
 {% block form_action %}
@@ -9,7 +9,7 @@
 {% endblock form_action %}
 
 {% block table %}
-  <table id="id_list_table">
+  <table id="id_list_table" class="table">
     {% for item in list.item_set.all %}
       <tr><td>{{forloop.counter}}: {{ item.text }}</td></tr>  
     {% endfor %}
