--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -5,7 +5,7 @@
 {% endblock header_text %}
 
 {% block form_action %}
-  /lists/{{list.id}}/
+  {% url 'view_list' list.id %}
 {% endblock form_action %}
 
 {% block table %}
