--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -9,6 +9,7 @@
 {% endblock form_action %}
 
 {% block table %}
+  <h2> List by <span id="id_list_owner">{{list.owner.email | default:"Anonymous"}}</span></h2>
   <table id="id_list_table" class="table">
     {% for item in list.item_set.all %}
       <tr><td>{{forloop.counter}}: {{ item.text }}</td></tr>  
@@ -17,9 +18,20 @@
 {% endblock table %}
 
 {% block extra_content %}
-  <h2>Share this list</h2>
-  <form method="post" action="{% url 'share_list' list.id %}">
-    <input type="email" name="sharee" placeholder="your-friend@example.com">
-    {% csrf_token %}
-  </form>
+  <div class="col-md-3 col-md-offset-3">
+    <h2>Shared with</h2>
+    <ul>
+      {% for user in list.shared_with.all %}
+        <li class="list-sharee"> {{user.email}} </li>
+      {% endfor %}
+    </ul>
+  </div>
+  <div class="col-md-3">
+    <h2>Share this list</h2>
+    <form method="post" action="{% url 'share_list' list.id %}">
+      <input class="form-control" type="email" name="sharee" placeholder="your-friend@example.com">
+      {% csrf_token %}
+    </form>
+  </div>
+</div>
 {% endblock %}
