--- a/lists/templates/my_lists.html
+++ b/lists/templates/my_lists.html
@@ -7,10 +7,20 @@
 {% block list_form %} {% endblock list_form %}
 
 {% block extra_content %}
-  <h2> {{ owner.email }}'s lists</h2>
-  <ul>
-    {% for list in owner.list_set.all %}
-      <li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
-    {% endfor %}
-  </ul>
+  <div class="col-md-3 col-md-offset-3">
+    <h2> {{ owner.email }}'s lists</h2>
+    <ul>
+      {% for list in owner.list_set.all %}
+        <li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
+      {% endfor %}
+    </ul>
+  </div>
+  <div class="col-md-3">
+    <h2> shared with {{ owner.email }}</h2>
+    <ul>
+      {% for list in owner.shared_with.all %}
+        <li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
+      {% endfor %}
+    </ul>
+  </div>
 {% endblock extra_content %}
